# virtual-meter

./: .gitignore  Cargo.toml  backup_virtual_meter_server  check_target_dir  create_deploy_user.sh  create_tarball  create_target_user.sh  delete_all_workflows  purge_deploy_user.sh  push  restart_virtual_meter_server  setup_deploy.sh  transfer_artifact  watch_current_workflow  xxx
.github/workflows/: rust-ci.yml  vmeter_dispatch.yml
config/: meter_config.yaml
deploy/bachelor/: check_target_dir  info.yml  key  ssh  ssh_deploy  transfer_artifact
deploy/blechdepp/: info.yml  key  ssh
deploy/dispatcher/: info.yml  key  sftp  ssh
deploy_routines/: check_runningmate_target_symlink  create_publish_current_tarball  restart_virtual_meter_server  test  transfer_artifact  transfer_binary_config_deploy_routines  virtual_meter_server.service  x
src/: client.rs  config_load.rs  logger.rs  main.rs  main_client.rs  main_server.rs  server.rs  service.rs
src/client/: mod.rs  tcp_client.rs
src/meter_config/: meter_config.rs  mod.rs
src/server/: mod.rs  service_init.rs  tcp_server.rs
state_transitions/: CHARGING.md  Configurable_Variables_in_OCPP_2.0.1.md
virtual_meter_server/: virtual_meter_server
xxx/: main.rs
